; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_emscriptenegl_ctx.c_gfx_ctx_emscripten_swap_interval.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_emscriptenegl_ctx.c_gfx_ctx_emscripten_swap_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EM_TIMING_SETIMMEDIATE = common dso_local global i32 0, align 4
@EM_TIMING_RAF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @gfx_ctx_emscripten_swap_interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_ctx_emscripten_swap_interval(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* @EM_TIMING_SETIMMEDIATE, align 4
  %10 = call i32 @emscripten_set_main_loop_timing(i32 %9, i32 0)
  br label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @EM_TIMING_RAF, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @emscripten_set_main_loop_timing(i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %11, %8
  ret void
}

declare dso_local i32 @emscripten_set_main_loop_timing(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
